# decibel_db

./: .gitignore  .gitmodules  Cargo.toml  README.md
db_designs/: decibel-db.gv  music.db.gv
migrations/: 1.chk.sql  1.down.sql  1.up.sql  10.up.sql  11.down.sql  11.up.sql  12.down.sql  12.up.sql  15.down.sql  15.up.sql  2.down.sql  2.up.sql  3.down.sql  3.up.sql  4.chk.sql  4.down.sql  5.down.sql  6.chk.sql  6.up.sql  7.chk.sql  7.up.sql  8.chk.sql  8.down.sql  migaton.yml
migrations/idx_albumartistsunique/: chk.sql  down.sql  up.sql
migrations/idx_albumtrackartistsunique/: chk.sql  down.sql  up.sql
migrations/idx_albumtracksunique/: chk.sql  down.sql  up.sql
migrations/idx_albumtypesname/: chk.sql  down.sql  up.sql
migrations/idx_artistsname/: chk.sql  down.sql  up.sql
migrations/idx_artisttypesname/: chk.sql  down.sql  up.sql
migrations/ins_albumtypes/: chk.sql  down.sql  up.sql
migrations/ins_artisttypes/: chk.sql  down.sql  up.sql
migrations/tbl_albumartists/: chk.sql  down.sql  up.sql
migrations/tbl_albums/: chk.sql  down.sql  up.sql
migrations/tbl_albumtrackartists/: chk.sql  down.sql  up.sql
migrations/tbl_albumtracks/: chk.sql  down.sql  up.sql
migrations/tbl_albumtypes/: chk.sql  down.sql  up.sql
migrations/tbl_artists/: chk.sql  down.sql  up.sql
migrations/tbl_artisttypes/: chk.sql  down.sql  up.sql
migrations/tbl_files/: chk.sql  (+2 more)
src/: album.rs  albumartist.rs  albumtrack.rs  albumtrackartist.rs  albumtype.rs  artist.rs  artisttype.rs  constants.rs  file.rs  lib.rs  migrator.rs  song.rs  test_utils.rs  tests.rs  utils.rs
(+65 files in other folders)
