[package]
name = "decibel_db"
version = "0.1.0"
edition = "2021"
[dependencies.async-std]
features = ["attributes"]
version = "1.11.0"
[dependencies.chrono]
version = "0.4"
[dependencies.sqlx]
features = ["runtime-async-std-native-tls", "sqlite", "chrono"]
version = "0.5.13"
[dependencies.uuid]
features = ["v4"]
version = "1.1.0"

