[package]
name = "decibel-db"
version = "0.1.0"
edition = "2021"
[dependencies]
async-std = { version = "1.11.0", features = [ "attributes" ] }
chrono = { version = "0.4" }
sqlx = { version = "0.5.13", features = [ "runtime-async-std-native-tls", "sqlite", "chrono" ] }
uuid = { version = "1.1.0", features = [ "v4" ] }
